--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="./favicon.ico" />
+		<!-- <script src="https://kit.fontawesome.com/5ee10dd587.js" crossorigin="anonymous"></script> -->
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/brands.min.css"
+			integrity="sha512-AMDXrE+qaoUHsd0DXQJr5dL4m5xmpkGLxXZQik2TvR2VCVKT/XRPQ4e/LTnwl84mCv+eFm92UG6ErWDtGM/Q5Q=="
+			crossorigin="anonymous"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dashchef</title>
 	</head>
